Added package comments & functions comments : fix linter, base controllers & routes for auth but not implemented yet
